--- a/TLS_Proyecto/CA/makefile
+++ b/TLS_Proyecto/CA/makefile
@@ -20,14 +20,16 @@ gencert:
 		-ca=ca.pem \
 		-ca-key=ca-key.pem \
 		-config=test/ca-config.json \
-		-profile=server \
-		test/server-csr.json | cfssljson -bare server
-
+		-profile=client \
+		-cn="root"
+		test/client-csr.json | cfssljson -bare client
+	
 	cfssl gencert \
 		-ca=ca.pem \
 		-ca-key=ca-key.pem \
 		-config=test/ca-config.json \
 		-profile=client \
+		-cn="nobody"
 		test/client-csr.json | cfssljson -bare client
 
 	cfssl gencert \
