--- a/TLS_Proyecto/CA/makefile
+++ b/TLS_Proyecto/CA/makefile
@@ -13,39 +13,39 @@ init:
 # Finally we create the client certificate this allows two way authentication
 gencert:
 	cfssl gencert \
-		-initca test/ca-csr.json | cfssljson -bare ca
+		-initca CA/ca-csr.json | cfssljson -bare ca
 
 	cfssl gencert \
 		-ca=ca.pem \
 		-ca-key=ca-key.pem \
-		-config=test/ca-config.json \
+		-config=CA/ca-config.json \
 		-profile=client \
 		-cn="root" \
-		test/client-csr.json | cfssljson -bare client
+		CA/client-csr.json | cfssljson -bare client
 
 	cfssl gencert \
 		-ca=ca.pem \
 		-ca-key=ca-key.pem \
-		-config=test/ca-config.json \
+		-config=CA/ca-config.json \
 		-profile=client \
 		-cn="nobody" \
-		test/client-csr.json | cfssljson -bare nobody-client
+		CA/client-csr.json | cfssljson -bare nobody-client
 
 	cfssl gencert \
 		-ca=ca.pem \
 		-ca-key=ca-key.pem \
-		-config=test/ca-config.json \
+		-config=CA/ca-config.json \
 		-profile=client \
 		-cn="root" \
-		test/client-csr.json | cfssljson -bare root-client
+		CA/client-csr.json | cfssljson -bare root-client
 
 	cfssl gencert \
 		-ca=ca.pem \
 		-ca-key=ca-key.pem \
-		-config=test/ca-config.json \
+		-config=CA/ca-config.json \
 		-profile=client \
 		-cn="nobody" \
-		test/client-csr.json | cfssljson -bare nobody-client
+		CA/client-csr.json | cfssljson -bare nobody-client
 	
 	# Mover todos los certificados generados a la carpeta de configuración
 	mv *.pem *.csr ${CONFIG_PATH}
@@ -58,10 +58,10 @@ compile:
 		--proto_path=.
 
 $(CONFIG_PATH)/model.conf:
-	cp test/model.conf $(CONFIG_PATH)/model.conf
+	cp ACL/model.conf $(CONFIG_PATH)/model.conf
 
 $(CONFIG_PATH)/policy.csv:
-	cp test/policy.csv $(CONFIG_PATH)/policy.csv
+	cp ACL/policy.csv $(CONFIG_PATH)/policy.csv
 
 .PHONY: test
 test: $(CONFIG_PATH)/policy.csv $(CONFIG_PATH)/model.conf
