Update Test -> Ya quedo

--- a/TLS_Proyecto/makefile
+++ b/TLS_Proyecto/makefile
@@ -1,6 +1,5 @@
 # Esto nos ayuda a posicionar nuestros config files en una carpeta dentro de nuestro proyecto
-CONFIG_PATH=${HOME}C:\Users\danyv\OneDrive\Desktop\0241911_SistemasDistribuidos\TLS_Proyecto
-
+CONFIG_PATH=${HOME}/0241911_SistemasDistribuidos/TLS_Proyecto
 
 .PHONY: init
 
@@ -20,17 +19,15 @@ gencert:
 		-ca=ca.pem \
 		-ca-key=ca-key.pem \
 		-config=CA/ca-config.json \
-		-profile=client \
-		-cn="root" \
-		CA/client-csr.json | cfssljson -bare client
+		-profile=server \
+		CA/server-csr.json | cfssljson -bare server
 
 	cfssl gencert \
 		-ca=ca.pem \
 		-ca-key=ca-key.pem \
 		-config=CA/ca-config.json \
 		-profile=client \
-		-cn="nobody" \
-		CA/client-csr.json | cfssljson -bare nobody-client
+		CA/client-csr.json | cfssljson -bare client
 
 	cfssl gencert \
 		-ca=ca.pem \
@@ -47,32 +44,25 @@ gencert:
 		-profile=client \
 		-cn="nobody" \
 		CA/client-csr.json | cfssljson -bare nobody-client
-	
-	# Mover todos los certificados generados a la carpeta de configuración
 	mv *.pem *.csr ${CONFIG_PATH}
 
-.PHONY: compile
 compile:
 	protoc api/v1/*.proto \
-		--go_out=. \
-		--go_opt=paths=source_relative \
-		--proto_path=.
-
+					--go_out=.\
+					--go_opt=paths=source_relative \
+					--proto_path=.
 $(CONFIG_PATH)/model.conf:
-	cp ACL/model.conf $(CONFIG_PATH)/model.conf
+	cp CA/model.conf $(CONFIG_PATH)/model.conf
 
 $(CONFIG_PATH)/policy.csv:
-	cp ACL/policy.csv $(CONFIG_PATH)/policy.csv
+	cp CA/policy.csv $(CONFIG_PATH)/policy.csv
 
-.PHONY: test
 test: $(CONFIG_PATH)/policy.csv $(CONFIG_PATH)/model.conf
 	go test -race ./...
-
-.PHONY: compile_rpc
 compile_rpc:
 	protoc api/v1/*.proto \
-		--go_out=. \
-		--go_opt=paths=source_relative \
-		--go-grpc_out=. \
-		--go-grpc_opt=paths=source_relative \
-		--proto_path=.
+	--go_out=. \
+	--go_opt=paths=source_relative \
+    --go-grpc_out=. \
+	--go-grpc_opt=paths=source_relative \
+	--proto_path=.
