--- a/Lab4/makefile
+++ b/Lab4/makefile
@@ -1,5 +1,5 @@
 # Esto nos ayuda a posicionar nuestros config files en una carpeta dentro de nuestro proyecto
-CONFIG_PATH=${HOME}/0241911_SistemasDistribuidos/TLS_Proyecto
+CONFIG_PATH=${HOME}D/Documents/0241911_SistemasDistribuidos/TLS_Proyecto/.Proyecto
 
 .PHONY: init
 
